--- a/src/components/ContentOverlay.css
+++ b/src/components/ContentOverlay.css
@@ -148,6 +148,7 @@
   font-weight: 500;
   line-height: 1.4;
   color: var(--variant-text, var(--text-primary));
+  width: fit-content;
   max-width: 250px;
   align-self: flex-end;
   opacity: 0;
